--- a/addons/hein_image_editor/plugin.cfg
+++ b/addons/hein_image_editor/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="Image Editor"
-description=""
-author=""
+name="Hein Image Tool"
+description="Image editor addon with just enough features for basic image modification."
+author="Hein Thet Aung"
 version=""
 script="plugin.gd"
